--- a/UI/index.html
+++ b/UI/index.html
@@ -51,7 +51,7 @@
           <button class="scenario-card is-active" data-scenario="standup">
             <span class="pill">01</span>
             <h2>Startup Standup 2.0: The Bottleneck Breaker</h2>
-            <p>SLUSH lounge conversation with Sarah (VC).</p>
+            <p>SusHi Tech Tokyo 2026 networking lounge conversation with Sarah (VC).</p>
           </button>
         </div>
       </div>
@@ -160,7 +160,7 @@
         <div class="inspector-card">
           <p class="inspector-title">Prompt</p>
           <p class="prompt-text" id="promptText">
-            At the SLUSH 2025 startup lounge, you spot an empty seat in a
+            At the SusHi Tech Tokyo 2026 startup lounge, you spot an empty seat in a
             crowded area. Do you ask to sit?
           </p>
         </div>
@@ -189,27 +189,49 @@
         <h2>Select Your Experience</h2>
         <button id="closeModal" class="close-btn">&times;</button>
       </header>
-
       <div class="scenario-options-container">
         <div class="scenario-option-card">
           <h3>Business</h3>
           <p class="scenario-desc">
-            Networking at the SLUSH 2025 lounge.
+            Networking at the SusHi Tech Tokyo 2026 lounge.
             Find Sarah, a VC, and practice your pitch in a realistic business environment.
           </p>
           <button class="primary select-scenario-btn" data-scenario="business">Select</button>
         </div>
-
         <div class="scenario-option-card is-locked">
           <h3>Daily Life</h3>
           <p class="scenario-desc">Coming Soon</p>
           <button class="ghost" disabled>Locked</button>
         </div>
-
         <div class="scenario-option-card is-locked">
           <h3>Industry</h3>
           <p class="scenario-desc">Coming Soon</p>
           <button class="ghost" disabled>Locked</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="apiModal" class="modal-overlay">
+    <div class="modal-content">
+      <header class="modal-header">
+        <h2>Select AI Provider</h2>
+        <button id="closeApiModal" class="close-btn">&times;</button>
+      </header>
+      <div class="scenario-options-container">
+        <div class="scenario-option-card">
+          <h3>Gemini API</h3>
+          <p class="scenario-desc">
+            Fast and intuitive. Values the overall atmosphere and natural communication of your responses
+          </p>
+          <button class="primary select-api-btn" data-api="gemini">Select Gemini</button>
+        </div>
+        <div class="scenario-option-card">
+          <h3>OpenAI API</h3>
+          <p class="scenario-desc">
+            Detailed and precise. Focuses on logical consistency, professional vocabulary, and structural accuracy.
+          </p>
+          <button class="primary select-api-btn" data-api="openai">Select OpenAI</button>
         </div>
       </div>
     </div>
